Refactor:
- replaced if-else with a ternary operator for conciseness in getOddNumsAverage method.
- combined map and flatMap operations in getCatsNames for a more streamlined approach.
- extracted magic numbers and strings into constants in CandidateValidator class for better readability and maintainability.
- replaced Collectors.toList() with toList() for more concise code where applicable.